[tool.poetry]
name = "mf-music"
version = "0.1.0"
description = ""
authors = ["Jonathan <jonathan.silva@birdie.ai>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
opencv-python = "^4.6.0.66"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
